feat : upload 경로변경
./build -> ./dist

--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -38,7 +38,7 @@ jobs:
         run: aws s3 rm s3://mini-game-world-web --recursive --include "*"
 
       - name: Upload new files to S3
-        run: aws s3 cp ./build s3://mini-game-world-web/ --recursive
+        run: aws s3 cp ./dist s3://mini-game-world-web/ --recursive
 
       - name:  Cloudfront 캐시 무효화
         run: aws cloudfront create-invalidation --distribution-id E1WQE1CPEFVIRJ --paths "/*"
